fix: remove unnecessary stack-gap

--- a/css/css-classes.generated.css
+++ b/css/css-classes.generated.css
@@ -8,11 +8,6 @@
 .gutter-3 {}
 .gutter-4 {}
 .gutter-5 {}
-.stack-gap-1 {}
-.stack-gap-2 {}
-.stack-gap-3 {}
-.stack-gap-4 {}
-.stack-gap-5 {}
 .gap-top-1 {}
 .gap-top-2 {}
 .gap-top-3 {}
